# BlasDemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dev_log.md
include/: blas_demo.h  ntt.h
result/: run_arch_0617_1.txt  run_arch_0617_2.txt  run_arch_0617_3.txt  run_arch_0617_4.txt
src/: blas_demo.cpp  main.cpp  ntt.cpp
